test/compiler/invalid_programs/classes/instance_constant_attribute.jm
#!TypeError

class Foo
  const value:Int
  new(v:Int)
    value = v
  end
end

foo = Foo(12)
foo.value = 13
puts(foo.value)
